--- a/app/src/main/res/layouts/activities/loginActivity/layout/login_activity_layout.xml
+++ b/app/src/main/res/layouts/activities/loginActivity/layout/login_activity_layout.xml
@@ -6,7 +6,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.implementations.authentication.AuthenticationActivity">
+    tools:context=".activities.implementations.authentication.LoginActivity">
 
     <TextView
         style="@style/DarkBlueTitle"
@@ -85,7 +85,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
-        android:onClick="login"
+        android:onClick="tapLoginButton"
         android:text="@string/login"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -118,7 +118,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:onClick="showDebugLayout"
+        android:onClick="tapDebugButton"
         android:text="Debug"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
