--- a/app/src/main/res/layouts/activities/registerActivity/layout/register_activity_layout.xml
+++ b/app/src/main/res/layouts/activities/registerActivity/layout/register_activity_layout.xml
@@ -1,34 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/gradient_background">
 
     <include
-        layout="@layout/login_layout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/layoutLogin" />
-
-    <include
+        android:id="@+id/layoutRegister1"
         layout="@layout/register_layout1"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="invisible"
-        android:id="@+id/layoutRegister1"/>
+        android:visibility="invisible" />
 
     <include
+        android:id="@+id/layoutRegister2"
         layout="@layout/register_layout2"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="invisible"
-        android:id="@+id/layoutRegister2"/>
+        android:visibility="invisible" />
 
     <include
+        android:id="@+id/layoutRegister3"
         layout="@layout/register_layout3"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="invisible"
-        android:id="@+id/layoutRegister3"/>
+        android:visibility="invisible" />
 
 </RelativeLayout>
