--- a/app/src/main/res/layouts/activities/registerActivity/layout/register_layout2.xml
+++ b/app/src/main/res/layouts/activities/registerActivity/layout/register_layout2.xml
@@ -4,14 +4,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context=".activities.implementations.authentication.RegisterActivity">
 
     <Button
         android:id="@+id/registrationBack2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dp"
-        android:onClick="showLoginLayout"
+        android:onClick="backToLogin"
         android:text="Back to login"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
